syntax = "proto3";
package game;

option go_package = "gen/proto";

import "proto/reversi_player.proto";

service ReversiMathingService {
  rpc JoinRoom(JoinRoomRequest) returns (stream JoinRoomResponse) {}
}

message JoinRoomRequest {}
message JoinRoomResponse {
  enum MatchingStatus {
    UNKNOWN = 0;
    WAITING = 1;
    MATCHD = 2;
  }

  Room room = 1;
  Player me = 2;
  MatchingStatus Status = 3;
}

message Room {
  int32 id = 1;
  Player host = 2;
  Player guest = 3;
}